# store

./: Dockerfile  README.md  dev.md
store_monitoring_system/: Dockerfile  config.py  docker-compose.yml  pyproject.toml  requirements.txt
store_monitoring_system/src/store_monitoring/: config.py  main.py
store_monitoring_system/src/store_monitoring/api/: main.py
store_monitoring_system/src/store_monitoring/database/: models.py
store_monitoring_system/src/store_monitoring/models/: database.py
store_monitoring_system/src/store_monitoring/services/: checkout_verification_service.py  customer_tracking_service.py  face_recognition_service.py  inventory_management_service.py  planogram_analysis_service.py  product_detection_service.py
store_monitoring_system/src/store_monitoring/utils/: db_utils.py  kafka_utils.py  logging_utils.py  redis_utils.py
store_monitoring_system/tests/integration/: test_checkout_process.py
store_monitoring_system/tests/unit/: test_face_recognition.py
