[tool.poetry]
name = "store-monitoring-system"
version = "0.1.0"
description = "A comprehensive store monitoring system"
authors = ["sp<saumilpatel2425@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kafka-python = "^2.0.2"
redis = "^5.0.7"
opencv-python = "^4.10.0.84"
torch = "^2.3.1"
ultralytics = "^8.2.50"
sentence-transformers = "^3.0.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
